fix: adjust padding in menu footer

--- a/site/layouts/partials/menu-footer.html
+++ b/site/layouts/partials/menu-footer.html
@@ -1,29 +1,31 @@
-<div><strong>Alchemist Simulator {{ .Site.Params.version }}</strong></div>
-<br>
-<a
-    class="github-button"
-    href="https://github.com/AlchemistSimulator/Alchemist/releases/latest/"
-    data-icon="octicon-cloud-download" aria-label="Download Alchemist-full on GitHub"
->
-Download
-</a>
-<a
-    class="github-button"
-    href="https://github.com/AlchemistSimulator/Alchemist"
-    data-icon="octicon-star"
-    data-show-count="true"
-    aria-label="Star McShelby/hugo-theme-relearn on GitHub"
->
-Star
-</a>
-<a
-    class="github-button"
-    href="https://github.com/AlchemistSimulator/Alchemist/fork"
-    data-icon="octicon-repo-forked"
-    data-show-count="true"
-    aria-label="Fork McShelby/hugo-theme-relearn on GitHub"
->
-Fork
-</a>
-<p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn"><span class="fas fa-heart"></span></a> by <a href="https://gohugo.io/">Hugo</a></p>
-<script async defer src="https://buttons.github.io/buttons.js"></script>
+<div class="padding">
+    <div><strong>Alchemist Simulator {{ .Site.Params.version }}</strong></div>
+    <br>
+    <a
+        class="github-button"
+        href="https://github.com/AlchemistSimulator/Alchemist/releases/latest/"
+        data-icon="octicon-cloud-download" aria-label="Download Alchemist-full on GitHub"
+    >
+    Download
+    </a>
+    <a
+        class="github-button"
+        href="https://github.com/AlchemistSimulator/Alchemist"
+        data-icon="octicon-star"
+        data-show-count="true"
+        aria-label="Star McShelby/hugo-theme-relearn on GitHub"
+    >
+    Star
+    </a>
+    <a
+        class="github-button"
+        href="https://github.com/AlchemistSimulator/Alchemist/fork"
+        data-icon="octicon-repo-forked"
+        data-show-count="true"
+        aria-label="Fork McShelby/hugo-theme-relearn on GitHub"
+    >
+    Fork
+    </a>
+    <p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn"><span class="fas fa-heart"></span></a> by <a href="https://gohugo.io/">Hugo</a></p>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+</div>
