--- a/site/layouts/shortcodes/import.html
+++ b/site/layouts/shortcodes/import.html
@@ -1,5 +1,5 @@
 {{- $content := readFile (.Get 0) | htmlUnescape -}}
-{{- $content -}}<!--
+{{- $content | safeHTML -}}<!--
   ~ Copyright (C) 2010-2022, Danilo Pianini and contributors
   ~ listed, for each module, in the respective subproject's build.gradle.kts file.
   ~
