refactor!: more refactoring (squash this commit)

--- a/site/layouts/shortcodes/api.html
+++ b/site/layouts/shortcodes/api.html
@@ -1,5 +1,5 @@
 {{- $packageRoot := .Get "packageRoot" | default "it.unibo.alchemist" -}}
-{{- $package := .Get "package" | default "model.interfaces" -}}
+{{- $package := .Get "package" | default "model" -}}
 {{- $class := .Get "class" | default "" -}}
 {{- $method := .Get "method" | default "" -}}
 [`
